typescript/checker/tests/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity17.ts.stderr
error: Unexpected token Some(AssignOp("="))
 --> $DIR/tests/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity17.ts:1:7
  |
1 | 1 >>> = 2;
  |       ^

